29 July 2009
[Sarah Frisk <ssfrisk@gmail.com> ]
	-Changed it so that wordlists are by the the name of the first word in file
	-Discovered what is causing images not showing up.  Apparently there is some memory issue that I've been working on for several days that causes any custom images not to appear when wordlists are added.  
	Line issue:  strncpy( fileNames[themes++], themesFile->d_name, FNLEN-1 );
	Commenting this out makes images show up again, but unfortunately makes the program unusable since we don't actually have a wordlist to work with.

20 July 2009
[Sarah Frisk <ssfrisk@gmail.com> ]
	-Started setting up visually the word list editor
	-Some issues with loading images and making them appear.  Attempting to fix this.

14 July 2009(svn.debian.org/tux4kids - revision 1208)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- made it so you can't edit the first word in a wordlist, since this is the title.
	- fixed a few bugs.

13 July 2009 (svn.debian.org/tux4kids - revision 1191)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-changed the names of the word*.png files to fit the list*.png conventions 
	titlescreen.c was looking for.  Menu icon now appears in-game.

12 July 2009 (svn.debian.org/tux4kids - revision 1184)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-fixed bug where deleting all the words in a word list causes the program to
	crash.  Instead, you can delete all but one word, which shall remain.

11 July 2009 (svn.debian.org/tux4kids - revision 1183
[Sarah Frisk <ssfrisk@gmail.com> ]
	- added icons for word list editor and placed them in data/images/menu.  Still
	need to implement them.

6 July 2009 (svn.debian.org/tux4kids - revision 1147)
[ Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed spacing issue in ChooseWord()
	- Fixed random garbage adding in ChooseWord()
	- Simplified ChooseWord() in general
	- For the most part ChooseWord() functionality is finished.  What is left is to had a 
	more comprehensible GUI than what is currently there (which involves figuring out how to 